[package]
name = "diesel-chrono-duration"
version = "1.0.0"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]

description = "Adds chrono::Duration support to the diesel"
readme = "README.md"
license = "MIT"
keywords = ["diesel", "time", "chrono", "duration"]

repository = "https://github.com/vityafx/diesel-chrono-duration"
documentation = "https://docs.rs/diesel-chrono-duration"

[badges]
travis-ci = { repository = "vityafx/diesel-chrono-duration" }

[dependencies]
diesel = "1"
chrono = "0.4"